# ros_manipulator_control

./: .gitignore  README.md  frames_2026-02-04_11.01.40.gv  test_extract_steps.py  test_move_joint_group.py
docs/: README.md
docs/ar4_control/: package_structure.md  teleop_joystick_guide.md
docs/ar4_description/: frames_reference.md  package_structure.md
docs/ar4_hardware_interface/: package_structure.md
docs/firmware/: ar4_teensy.md
docs/manipulator_bringup/: implementation_review.md  launch_files.md  package_structure.md
docs/manipulator_description/: frames_reference.md  package_structure.md  yaml_to_urdf.md
docs/manipulator_hardware_interface/: a6_dio_mapping.md  a6_pdo_mapping.md  bringup.md  ethercat_setup.md  known_issues.md  package_structure.md  rt_tuning.md
docs/manipulator_hardware_interface/patches/: ethercat_driver_ros2-icube.patch
docs/manipulator_hardware_interface/system/: README.md  ethercat-alias-program.sh  ethercat-irq-pin.service  ethercat-irq-pin.sh  limits.d-99-ethercat-rt.conf  systemd-99-ethercat-rt.conf
docs/medicine_vision/: vision_pipeline.md
docs/project_structure/: overview.md
docs/rest_api_bridge/: API_CLIENT_GUIDE_RU.md  IMPLEMENTATION.md  ROS2_INTEGRATION.md  TESTING.md  package_structure.md
docs/ros_control/: extract_box_server.md  get_container_action.md  get_container_server.md  gripper_service.md  move_joint_group_server.md  navigate_to_address_action.md  navigate_to_address_server.md  package_structure.md  pick_items_from_warehouse_action.md  pick_items_from_warehouse_server.md  place_container_action.md  place_container_server.md  return_box_server.md
docs/scara_control/: package_structure.md  scara_client.md  scara_client_architecture.md
docs/scara_description/: CHANGELOG.md  configuration.md  integration.md  package_structure.md  ros2_control.md
firmware/ar4_teensy/: platformio.ini
firmware/ar4_teensy/include/: config.h  homing.h  joints_config.h  motor.h  (+1 more)
medicine_vision/: .gitignore  db_manager.py  ocr_test.py  pipeline_test.py  predict.py  requirements.txt  train.py  verify_test.py
medicine_vision/data/: dataset.yaml
medicine_vision/scripts/: convert_labelme_to_yolo.py  verify_labels.py
scripts/: scara_demo.py
sensors/: hlk_ld2402.py
src/ar4_control/: package.xml  setup.cfg  setup.py
src/ar4_control/ar4_control/: teleop_joy.py
src/ar4_control/launch/: teleop_joy.launch.py
src/ar4_description/: CMakeLists.txt  package.xml
src/ar4_description/config/: ar4_controllers.yaml
src/ar4_description/rviz/: ar4.rviz
src/ar4_description/urdf/: ar4_macro.xacro  ar4_ros2_control.urdf.xacro  robot.urdf.xacro
src/ar4_hardware_interface/: CMakeLists.txt  ar4_hardware_interface_plugin.xml  package.xml
src/ar4_hardware_interface/include/ar4_hardware_interface/: ar4_system.hpp  serial_port.hpp  teensy_protocol.hpp
src/ar4_hardware_interface/src/: ar4_system.cpp  serial_port.cpp  teensy_protocol.cpp
src/manipulator_bringup/: CMakeLists.txt  package.xml
src/manipulator_bringup/launch/: ar4_bringup.launch.py  ar4_display.launch.py  ethercat_bench.launch.py  ethercat_full.launch.py  manipulator_bringup.launch.py
src/manipulator_description/: CMakeLists.txt  package.xml
src/manipulator_description/config/: manipulator_controllers.yaml  manipulator_params.yaml
src/manipulator_description/launch/: display.launch.py  manipulator_control.launch.py
src/manipulator_description/rviz/: view_robot.rviz
src/manipulator_description/urdf/: materials.xacro  robot.urdf.xacro
src/manipulator_description/urdf/manipulator/: manipulator.urdf.xacro  manipulator_base.urdf.xacro  manipulator_ethercat_full.urdf.xacro  manipulator_ethercat_test.urdf.xacro  manipulator_picker.urdf.xacro  manipulator_ros2_control.urdf.xacro  manipulator_selector.urdf.xacro
src/manipulator_diagnostics/: package.xml  setup.cfg  setup.py
src/manipulator_diagnostics/launch/: soak_test.launch.py
src/manipulator_diagnostics/manipulator_diagnostics/: sine_trajectory_driver.py  soak_monitor.py
src/manipulator_hardware_interface/: CMakeLists.txt  package.xml
src/manipulator_hardware_interface/config/: ethercat_bench_controllers.yaml  ethercat_full_controllers.yaml
src/manipulator_hardware_interface/config/ethercat/: a6_200ec_slave.yaml  a6_slave.yaml
src/manipulator_homing/: package.xml  setup.py
src/manipulator_msgs/: CMakeLists.txt  package.xml
src/rest_api_bridge/: README.md  package.xml  setup.cfg  setup.py
src/rest_api_bridge/config/: rest_api_config.yaml
src/rest_api_bridge/launch/: rest_api_server.launch.py
src/rest_api_bridge/rest_api_bridge/: api_server.py
src/rest_api_bridge/rest_api_bridge/middleware/: jwt_auth.py
src/rest_api_bridge/rest_api_bridge/models/: requests.py  responses.py
src/rest_api_bridge/rest_api_bridge/routers/: auth.py  container.py  health.py  medicine.py  task.py
src/rest_api_bridge/rest_api_bridge/services/: mock_service.py  ros_service.py
src/rest_api_bridge/rest_api_bridge/utils/: config.py
src/ros_control/: CMakeLists.txt  README.md  package.xml
src/ros_control/action/: ExtractBox.action  GetContainer.action  MoveJointGroup.action  NavigateToAddress.action  PickItemsFromWarehouse.action  ReturnBox.action
src/ros_control/config/: extract_box_config.yaml  get_container_config.yaml  gripper_config.yaml  move_joint_group_config.yaml  navigate_to_address_config.yaml  pick_items_from_warehouse_config.yaml  place_container_config.yaml  return_box_config.yaml
src/ros_control/launch/: extract_box_server.launch.py  move_joint_group_server.launch.py
src/ros_control/msg/: Address.msg  Medicament.msg
src/ros_control/src/: extract_box_server.py  get_container_server.py  gripper_service.py  move_joint_group_server.py  navigate_to_address_server.py  pick_items_from_warehouse_server.py  place_container_server.py  return_box_server.py
src/scara_control/: package.xml  setup.py
src/scara_control/scara_control/: __init__.py  scara_client.py  scara_lock_server.py
src/scara_description/: CMakeLists.txt  README.md  package.xml
tools/csp_smoke/: Makefile  csp_smoke.c
(+334 files in other folders)
