<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_bringup</name>
  <version>0.1.0</version>
  <description>Unified launch system for manipulator ROS2 control infrastructure</description>
  <maintainer email="akhmedov@example.com">akhmedov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>manipulator_description</depend>
  <depend>scara_description</depend>
  <depend>ar4_description</depend>
  <depend>ros_control</depend>
  <depend>manipulator_hardware_interface</depend>

  <!-- Runtime dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Python dependencies for YAML parsing -->
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>







