<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_diagnostics</name>
  <version>0.1.0</version>
  <description>Long-running soak / jitter tests for the EtherCAT manipulator (Stage 7 readiness).</description>
  <maintainer email="fedoseevph1@gmail.com">bakhodur</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>manipulator_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
