<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rest_api_bridge</name>
  <version>0.1.0</version>
  <description>REST API bridge for manipulator control with JWT authentication</description>
  <maintainer email="akhmedov@example.com">akhmedov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ros_control</depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-jose</exec_depend>
  <exec_depend>python3-cryptography</exec_depend>
  <exec_depend>python3-passlib</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
