<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_control</name>
  <version>0.1.0</version>
  <description>Unified ROS2 control interface for manipulator, SCARA, and other equipment</description>
  <maintainer email="akhmedov@example.com">akhmedov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Action definition -->
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Controller dependencies -->
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>

  <!-- SCARA control library -->
  <depend>scara_control</depend>

  <!-- Python dependencies -->
  <depend>pyyaml</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


