<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_control</name>
  <version>0.1.0</version>
  <description>Reusable SCARA arm control library with IK, linear motion, and optional Z-axis support</description>
  <maintainer email="akhmedov@example.com">akhmedov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>scara_description</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
